fix: bag with deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "friday-project",
-  "homepage": "https://Sergei-Vorfolomeev/github.io/friday-project",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
