--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-thunk": "^2.4.2",
     "stylelint-config-css-modules": "^4.2.0",
     "typescript": "^4.9.5",
+    "use-debounced-effect": "^2.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
