--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "friday-project",
-  "homepage": ".",
+  "homepage": "https://Nadyushka.github.io/cardsProject",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,7 +39,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prettier": "prettier --write"
   },
   "browserslist": {
     "production": [
